[project]
name = "molbals-stats"
version = "1.0.0"
description = "Prompt diagnostics output node for elapsed time plus sampled peak process RAM and device VRAM."
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "psutil",
]

[project.urls]
Repository = "https://github.com/molbal/ComfyUI-molbals-stats"

[tool.comfy]
PublisherId = "molbal94"
DisplayName = "molbals-stats"
Icon = "https://github.com/molbal/ComfyUI-molbals-stats/raw/master/icon.png"
